  * man/svlogd.8: add hint on how to manually remove log files after the
    number of log files svlogd should maintain has been reduced; add hint
    about increasing the buffer size if lots of data is to be processed
    in short time.

1.7.2
Tue, 21 Nov 2006 15:13:47 +0000
  * doc/index.html: add list of distributions that are known to include
    or package runit; some reordering.
  * doc/replaceinit.html: point to faq.html#create, faq.html#tell (thx
    David Kaufman).
  * doc/runscripts.html: point to faq.html#createlog.
  * runit.c: fix arguments to wait_pid() after fork for reboot_system()
    (thx Jan Kampe).
  * man/runsv.8: suggest printf t instead of echo -n t.
  * runsv.c: really don't act on commands in state finish; minor.

1.7.1
Sat, 04 Nov 2006 19:23:29 +0000
  * chpst.c, uidgid.c, uidgid.h: support numerical uid gid through
    chpst -[u|U] :uid:gid...
  * man/chpst.8: adapt; clarify that users and groups are looked up in
    /etc/passwd and /etc/group only.
  * sv.c: properly wait for a service to be restarted on 'restart';
    support checks through -v for pause, cont, kill.
  * doc/runscripts.html: add contributed run scripts (thx Kevin, marlowe,
    ed neville, xavier dutoit).

1.7.0
Sat, 07 Oct 2006 18:24:17 +0000
  * svlogd.c, fmt_ptime.*, man/svlogd.8: new option -ttt: prefix log
    messages with sortable UTC timestamp YYYY-MM-DDTHH:MM:SS.xxxxx.
  * runsv.c, runsv.8: give two arguments to ./finish: exit code and exit
    status of ./run (mostly copied from pipe-tools' npt-supervise, thx
    Laurent Bercot).
  * runit.c: don't make console the controlling terminal for process 1,
    but for stage 1 only; fork before initiating system halt or reboot,
    the linux kernel calls do_exit(0) in kernel/sys.c (thx Jan Kampe).

1.6.0
Thu, 29 Jun 2006 07:52:35 +0000
  * svlogd.c: cleanup *.t files possibly leftover by processor when
    interrupted by signal, also on startup (thx Andras Korn,